--- a/Frontend/front-inventory/src/index.css
+++ b/Frontend/front-inventory/src/index.css
@@ -11,3 +11,37 @@
   width: 80%; /* Ajusta el ancho según sea necesario */
   max-width: 400px; /* También puedes establecer un ancho máximo */
 }
+
+#main {
+  margin-left: 350px;
+  margin-top: 100px;
+  margin-right: 60px;
+}
+
+.sidebar {
+  position: fixed;
+  top: 60px;
+  left: -300px; /* Oculto por defecto */
+  bottom: 0;
+  width: 280px;
+  z-index: 996;
+  transition: all 0.3s;
+  padding: 20px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: #aab7cf transparent;
+  box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
+  background-color: #fff;
+}
+
+@media (min-width: 1200px) {
+  .sidebar {
+    left: 0; /* Siempre visible en pantallas grandes */
+  }
+  
+  #main, #footer {
+    margin-left: 325px;
+  }
+}
+
+
